Picture-in-Picture: notifies the controller when window closed via system.

When the internal object is destroyed, notify the controller so it can
reset its internal state. It allows the user to close the window via any
system/window manager UI.

Bug: 863842
Change-Id: Ica84f4ffee2578658a60e0ae708a4e327d293077
Reviewed-on: https://chromium-review.googlesource.com/1147252
Reviewed-by: Camille Lamy <clamy@chromium.org>
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577594}
Former-commit-id: c04a9a27665700d3697b59d74964bfae1aafe7f3