content/public/browser/picture_in_picture_window_controller.h
@@ -38,7 +38,14 @@ class PictureInPictureWindowController {
   // Returns the size of the window in pixels.
   virtual gfx::Size Show() = 0;
 
+  // Called to notify the controller that the window was requested to be closed
+  // by the user or the content.
   virtual void Close(bool should_pause_video) = 0;
+
+  // Called by the window implementation to notify the controller that the
+  // window was requested to be closed and destroyed by the system.
+  virtual void OnWindowDestroyed() = 0;
+
   virtual void ClickCustomControl(const std::string& control_id) = 0;
   virtual void EmbedSurface(const viz::SurfaceId& surface_id,
                             const gfx::Size& natural_size) = 0;
